log
Mon 16 Oct 2023 12:02:26 AM UTC: 
 heap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:38:18: error: assignment to ‘heapElem *’ {aka ‘struct nodo *’} from incompatible pointer type ‘int *’ [-Werror=incompatible-pointer-types]
   38 |   heap->heapArray=(int*)malloc(sizeof(int)*3);
      |                  ^
heap.c:41:9: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘capacity’; did you mean ‘capac’?
   41 |   heap->capacity=3;
      |         ^~~~~~~~
      |         capac
cc1: all warnings being treated as errors
Compilation failed
45c088e
Mon 16 Oct 2023 12:02:36 AM UTC: 
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:38:19: error: assignment to ‘heapElem *’ {aka ‘struct nodo *’} from incompatible pointer type ‘int *’ [-Werror=incompatible-pointer-types]
   38 |   heap->heapArray = (int*)malloc(sizeof(int)*3);
      |                   ^
heap.c:41:9: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘capacity’; did you mean ‘capac’?
   41 |   heap->capacity=3;
      |         ^~~~~~~~
      |         capac
cc1: all warnings being treated as errors
Compilation failed
06a9bb5
Mon 16 Oct 2023 12:05:01 AM UTC: 
 heap.c | 12 +++++-------
 1 file changed, 5 insertions(+), 7 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:37:7: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘capacidad’
   37 |   dato->capacidad=3;
      |       ^~
Compilation failed
32112b1
Mon 16 Oct 2023 12:05:08 AM UTC: 
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:37:7: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘capacidad’
   37 |   dato->capacidad=3;
      |       ^~
Compilation failed
c945f3b
Mon 16 Oct 2023 12:05:25 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
12930cd
Mon 16 Oct 2023 12:08:15 AM UTC: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|2
total_score: 20/70
516ed5c
